src/objects/QPMS__AuditHistory__c.object
<CustomObject>
    <description>Audit Trail Object for Audit module.</description>
    <fields>
        <fullName>QPMS__ActionStatus__c</fullName>
        <defaultValue>&apos;Updated&apos;</defaultValue>
        <description>This field is for to display the action values like Created,Updated,Deleted in Audittrail</description>
        <label>ActionStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for to display the action value whether is created/updated</description>
        <inlineHelpText>This field is for to display the action value whether is created/updated</inlineHelpText>
        <label>Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Attachment_Id__c</fullName>
        <description>This field is used to save attachment name</description>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save audit program id</description>
        <label>Audit Program</label>
        <referenceTo>QPMS__Audit_Program__c</referenceTo>
        <relationshipLabel>Audit History</relationshipLabel>
        <relationshipName>Audit_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save audit type id</description>
        <label>Audit Type</label>
        <referenceTo>QPMS__Audit_Type__c</referenceTo>
        <relationshipLabel>AuditHistorys</relationshipLabel>
        <relationshipName>AuditHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to save the audit id</description>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>Audit History</relationshipLabel>
        <relationshipName>Audit_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>To save the description of the filed</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldApiName__c</fullName>
        <description>To save api name of the field</description>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldName__c</fullName>
        <description>To save the filed name</description>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__HistoryObject__c</fullName>
        <description>To differentiate the history object</description>
        <label>HistoryObject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checklist</fullName>
                </value>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>AuditType</fullName>
                </value>
                <value>
                    <fullName>AuditProgram</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Observation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Last_ModifiedBy__c</fullName>
        <description>To save the last modified by user</description>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last ModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NewValue__c</fullName>
        <description>To save new value in history object</description>
        <label>NewValue</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Object__c</fullName>
        <description>To save the object name</description>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To save observation in history object</description>
        <label>Observation</label>
        <referenceTo>QPMS__Observation__c</referenceTo>
        <relationshipLabel>Audit History</relationshipLabel>
        <relationshipName>Audit_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__OldValue__c</fullName>
        <description>To save the old value</description>
        <label>OldValue</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To save the parent filed id</description>
        <label>Checklist</label>
        <referenceTo>QPMS__Checklist__c</referenceTo>
        <relationshipLabel>Audit History</relationshipLabel>
        <relationshipName>AuditHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent__c</fullName>
        <description>To save related object</description>
        <label>Sub Parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Audit Type Checklist</fullName>
                </value>
                <value>
                    <fullName>Additional Details</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Audit program Initiation</fullName>
                </value>
                <value>
                    <fullName>planned Audit For Audit Program</fullName>
                </value>
                <value>
                    <fullName>Audit Program Reference</fullName>
                </value>
                <value>
                    <fullName>Effectiveness Review</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
                <value>
                    <fullName>AuditType Approval</fullName>
                </value>
                <value>
                    <fullName>Closure Change Due  Approval</fullName>
                </value>
                <value>
                    <fullName>observation</fullName>
                </value>
                <value>
                    <fullName>Response_Task Change Owner</fullName>
                </value>
                <value>
                    <fullName>EffectivenessReview Change Owner  Approval</fullName>
                </value>
                <value>
                    <fullName>Response Task Void</fullName>
                </value>
                <value>
                    <fullName>Response_Task Change Due Date</fullName>
                </value>
                <value>
                    <fullName>Closure Change Due Date</fullName>
                </value>
                <value>
                    <fullName>AuditProgram Approval</fullName>
                </value>
                <value>
                    <fullName>EffectivenessReview Change Due Date</fullName>
                </value>
                <value>
                    <fullName>CR Adhoc</fullName>
                </value>
                <value>
                    <fullName>Document Change</fullName>
                </value>
                <value>
                    <fullName>Containment</fullName>
                </value>
                <value>
                    <fullName>Disposition</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Collaboration Review</fullName>
                </value>
                <value>
                    <fullName>Functional Task</fullName>
                </value>
                <value>
                    <fullName>Response_Task Approval</fullName>
                </value>
                <value>
                    <fullName>Root_Cause</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check record deleted or not</description>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Audit History</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Parent__c</columns>
        <columns>QPMS__Description__c</columns>
        <columns>QPMS__FieldApiName__c</columns>
        <columns>QPMS__FieldName__c</columns>
        <columns>QPMS__HistoryObject__c</columns>
        <columns>QPMS__isDeleted__c</columns>
        <columns>QPMS__Last_ModifiedBy__c</columns>
        <columns>QPMS__NewValue__c</columns>
        <columns>QPMS__Object__c</columns>
        <columns>QPMS__Observation__c</columns>
        <columns>QPMS__OldValue__c</columns>
        <columns>QPMS__Sub_Parent__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AuditHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>